--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preload" href="./src/assets/dream_only.ttf" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="./src/assets/grape_nuts.ttf" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="./src/assets/oswald.ttf" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./src/assets/dream_only.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./src/assets/grape_nuts.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+  <link rel="preload" href="./src/assets/oswald.ttf" as="font" type="font/ttf" crossorigin="anonymous">
   <title>HeyHersheys</title>
 </head>
 
